enabling native build